# UCM-MPI-GPU

./: CMakeLists.txt  LICENSE  Makefile  README.md
CSparse/: CMakeLists.txt  Makefile  cmake_install.cmake
CSparse/include/: cs.h
buildW/: CMakeLists.txt  Makefile  cmake_install.cmake
buildW/include/: ic.hh  smatrix.hh
buildW/src/: affinity.cc  ic.cc  smatrix.cc
damascene/: CMakeLists.txt  Makefile  cmake_install.cmake
damascene/include/: exception.h  globalPb.h  logger.h
damascene/modules/: DetectCudaArch.cmake
damascene/src/: damascene.cu
damascene/src/convert/: convert.cu
damascene/src/intervening/: intervening.cu
damascene/src/localcues/: gradient.cu  localcues.cu  parabola.cu  rotate.cu
damascene/src/noReorthog/: lanczos.cu
damascene/src/nonmax/: nonmax.cu
damascene/src/postprocess/: skeleton.cu
damascene/src/spectralPb/: spectralPb.cu
damascene/src/stencilMatrixMultiply/: stencilMVM.cu
damascene/src/textons/: filters.cpp  kmeans.cu  texton.cu
globalPb/: CMakeLists.txt  Makefile  cmake_install.cmake
globalPb/src/math/: exact.cc
include/: GLSVM.h  SPFeatures.h  UCM_CONSTANTS.h  UCMgenerator.h  detmpb.h  head.h  otherheaders.h  watershed.h
labeledData/: rio1_GT.txt  rio1_texton_codebook.yml
log/: log.h
src/: GLSVM.cpp  MATLAB_functions.cpp  SPFeatures.cpp  UCMgenerator.cpp  buildW.cpp  contours2ucm.cpp  det_mPb.cpp  detmpb.cpp  fit_contour.cpp  fitparab.cpp  globalPb.cpp  main.cpp  mex_contour_sides.cpp  mex_pb_parts_final_selected.cpp  multiscalePb.cpp  nonmax_channels.cpp  nonmax_oriented.cpp  oeFilter.cpp  savgol_border.cpp  spectralPb.cpp  ucm_mean_pb.cpp  utilities.cpp  watershed.cpp
